# vpype

./: .gitignore  .readthedocs.yml  CHANGELOG.md  INSTALL.md  LICENSE  LICENSE_THIRD_PARTY  MANIFEST.in  PLUGINS.md  README.md  RELEASE.md  TODO.md  conf.py  index.md  index.rst  justfile  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/workflows/: benchmarks.yml  code_qa.yml  installer.yml  python-lint-tests.yml  python-lint.yml  python-package.yml  python-tests.yml  release.yml
dev/bench/: data.js
docs/: .gitignore  CHANGELOG.md  Makefile  api.rst  concepts.md  conf.py  contributing.md  contributing.rst  cookbook.rst  fundamentals.rst  index.rst  install.md  install.rst  license.rst  plugins.md  plugins.rst  reference.rst  requirements.txt
docs/_static/: .gitignore
docs/_templates/: base.html  class.rst  module.rst
examples/: .gitignore  alien.sh  alien2.sh  alien_letter.py  bc.sh  grid.vpy  skewed_bg.sh  skewed_bg.vpy
examples/star/: setup.py
examples/star/star/: star.py
scripts/: build.bat  installer_win.nsi  run_vpype.py
scripts/hooks/: hook-pnoise.py  hook-vpype.py
tests/: conftest.py  test_benchmarks.py  test_blocks.py  test_command_files.py  test_commands.py  test_config.py  test_conftest.py  test_files.py  test_geometry.py  test_hpgl.py  test_layers.py  test_line_index.py  test_metadata.py  test_model.py  test_property_substitution.py  test_reference_output.py  test_show.py  test_substitution.py  test_text.py  test_types.py  test_utils.py  test_viewer.py  test_vpype_primitives.py  utils.py
tests/__snapshots__/: test_commands.ambr
tests/data/: include.vpy  sub_include.vpy
tests/data/test_vpy/: crop_frame.vpy  grid_merge_by_name.vpy  merge_cmyk_by_name.vpy  merge_svgs.vpy  paint_well.vpy
vpype/: __init__.py  __main__.py  _deprecated.py  blocks.py  config.py  crop.py  debug.py  decorators.py  files.py  filters.py  frames.py  generators.py  geometry.py  hatch.py  hpgl.py  hpgl.toml  hpgl_devices.toml  io.py  layers.py  line_index.py  metadata.py  model.py  operations.py  primitives.py  read.py  script.py  show.py  text.py  transforms.py  utils.py  vpype.py  vpype_config.toml  write.py  zingl.py
vpype-core/: Cargo.toml
vpype-core/src/: main.rs
vpype/fonts/: astrology.pickle  cursive.pickle  cyrilc_1.pickle  cyrillic.pickle  futural.pickle  futuram.pickle  gothgbt.pickle  gothgrt.pickle  gothiceng.pickle  gothicger.pickle  gothicita.pickle  gothitt.pickle  greek.pickle  greekc.pickle  greeks.pickle  japanese.pickle  markers.pickle  mathlow.pickle  mathupp.pickle  meteorology.pickle  music.pickle  rowmand.pickle  rowmans.pickle  rowmant.pickle  scriptc.pickle  scripts.pickle  symbolic.pickle  timesg.pickle  timesi.pickle  timesib.pickle  timesr.pickle  timesrb.pickle
vpype/path/: arc.py  arc_old.py  exceptions.py  path.py  point.py  polyline.py  quad_bezier.py  segment.py  utils.py
vpype/path/tests/: test_arc.py  test_arc_old.py  test_quad_bezier.py
vpype2_sandbox/: benchmark_cached_property.py  benchmark_tools.py  numpy_structure.py  numpy_vectorize.py
vpype_cli/: __init__.py  __main__.py  _print.py  blocks.py  cli.py  debug.py  decorators.py  eval.py  filters.py  frames.py  generators.py  layerops.py  metadata.py  operations.py  primitives.py  read.py  script.py  show.py  state.py  substitution.py  text.py  transforms.py  types.py  write.py
vpype_viewer/: __init__.py  __main__.py  _painters.py  _scales.py  _utils.py  engine.py  math.py  painters.py  qt_viewer.py  utils.py
vpype_viewer/image/: __init__.py  __main__.py
vpype_viewer/qtviewer/: __init__.py  __main__.py  utils.py  viewer.py
vpype_viewer/shaders/: fast_line_fragment.glsl  fast_line_mono_fragment.glsl  fast_line_mono_vertex.glsl  fast_line_vertex.glsl  label_fragment.glsl  label_geometry.glsl  label_vertex.glsl  preview_line_fragment.glsl  preview_line_geometry.glsl  preview_line_vertex.glsl  ruler_patch_vertex.glsl  ruler_text_fragment.glsl  ruler_text_geometry.glsl  ruler_text_vertex.glsl  ruler_ticks_fragment.glsl  ruler_ticks_geometry.glsl  ruler_ticks_vertex.glsl
