[tool.poetry]
name = "vpype"
version = "1.14.0"
description = "The Swiss Army knife of vector graphics for pen plotters"
authors = ["Antoine Beyeler <abeyeler@ab-ware.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/abey79/vpype"
documentation = "https://vpype.readthedocs.io/en/latest/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics",
]
packages = [
    { include = "vpype" },
    { include = "vpype_cli" },
    { include = "vpype_viewer"},
]
include = [
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "vpype/*.toml",
    "vpype/fonts/*.pickle",
    "vpype_viewer/shaders/*.glsl",
    "vpype_viewer/resources/*.png",
    "vpype_viewer/qtviewer/resources/*",
]

[tool.poetry.scripts]
vpype = "vpype_cli.cli:cli"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"

asteval = ">=0.9.26"
cachetools = ">=4.2.2"
click = ">=8.0.1,<8.2.0"
multiprocess = ">=0.70.11"
numpy = ">=1.25"
pnoise = ">=0.2.0"
pyphen = "^0.14.0"
scipy = ">=1.6"
Shapely = ">=1.8.2"
svgelements = ">=1.6.10"
svgwrite = "~1.4"
tomli = ">=2.0.0"

# additional dependencies for the viewer and the `show` command
matplotlib = { version = ">=3.3.2", optional = true }
glcontext = { version = ">=2.3.2", optional = true }  # 2.3.2 needed to fix #200
moderngl = { version = ">=5.6.2,!=5.7.1,!=5.7.2", optional = true }  # see moderngl/moderngl#525
Pillow = { version = ">=9.0.1", optional = true }
PySide6 = { version = ">=6.4.0.1", optional = true }

[tool.poetry.group.dev.dependencies]
black = ">=22.3.0"
coverage = {extras = ["toml"], version = ">=5.4"}
mypy = ">=0.901"
packaging = ">=20.8"
pyinstaller = ">=4.3"
pyinstaller-hooks-contrib = ">=2022.3"  # fix for shapely 1.8.1
pytest = ">=6.2.3"
pytest-benchmark = ">=4.0.0"
pytest-cov = ">=2.11.0"
pytest-mpl = ">=0.12"
ruff = ">=0.0.277"
types-cachetools = ">=4.2.4"
types-pillow = ">=9.4.0.17,<11.0.0.0"
types-setuptools = ">=57.4.17"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
furo = ">=2022.12.7"
myst_parser = ">=0.18.0"
sphinx = ">=5.0.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-autodoc-typehints= ">=1.18.3"
sphinx-click = ">=4.3.0"
sphinx-copybutton = ">=0.5.0"


[tool.poetry.extras]
all = ["matplotlib", "glcontext", "moderngl", "Pillow", "PySide6"]

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--mpl --mpl-baseline-path tests/data/baseline --benchmark-disable"

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
files = "vpype,vpype_cli,vpype_viewer,tests"

[[tool.mypy.overrides]]
module = "cachetools.keys"
ignore_missing_imports = true  # somehow needed to silence one particular error

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "*/.tox/*",
    "*/__main__.py",
    "*/setup.py",
    "*/venv*/*",
    "vpype_viewer/qtviewer/*",  # cannot be tested
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
]

[tool.black]
line-length = 95
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 95
target-version = "py39"
select = [
    "D",
    "E",
    "F",
    "I",
    "W",
    "UP",
]
exclude = ["examples", "scripts"]
ignore = [
    "D1", # TODO: this should be applied on `vpype`

    "D202",
    "D203",
    "D205",
    "D213",
    "D403",
    "D415",
]

[tool.ruff.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F402", "F403"]
"docs/conf.py" = ["D100", "D103"]
"tests/*.py" = ["D209"]
